Fix bug where elements adjacent to code blocks had broken spacing

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -253,9 +253,11 @@ pre {
   }
 }
 
-* + pre,
-pre + * {
-  margin-top: 1.5rem;
+pre {
+  margin: {
+    top: 1.5rem;
+    bottom: 1.5rem;
+  }
 }
 
 nav {
